--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -979,7 +979,7 @@ footer .footer-links .links ul a {
 
 .team-member img {
   width: 100%;
-  height: 250px;
+  height: 150px;
   object-fit: cover;
 }
 
@@ -1070,4 +1070,9 @@ footer .footer-links .links ul a {
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+/* Help page styles */
+.help-icon {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
